chore: Final UI update

--- a/ai-bot/src/index.css
+++ b/ai-bot/src/index.css
@@ -2,3 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+.form {
+    width: 100%;
+    height: 100%;
+  }
+  .message {
+    width: 80%;
+    height: 80%;
+    border-radius: 5px 0px 0px 5px;
+    border: 1px solid #ddd;
+    outline: none;
+    padding: 15px;
+  }
+  .send-btn {
+    width: 100px;
+    padding: 14px 10px 14px 10px;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    border-radius: 0px 5px 5px 0px;
+  }
